<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arm_status" />

    <Button
        android:id="@+id/left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/up"
        android:text="@string/arm_left" />

    <Button
        android:id="@+id/right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/left"
        android:layout_alignBottom="@+id/left"
        android:layout_toRightOf="@+id/up"
        android:text="@string/arm_right" />

    <Button
        android:id="@+id/down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/up"
        android:layout_below="@+id/left"
        android:text="@string/arm_down" />

    <Button
        android:id="@+id/up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/right"
        android:layout_centerHorizontal="true"
        android:text="@string/arm_up" />

    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/down"
        android:layout_marginTop="30dp"
        android:layout_toRightOf="@+id/down"
        android:text="@string/arm_stop" />

    <Button
        android:id="@+id/onegrasp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/stop"
        android:layout_alignBottom="@+id/stop"
        android:layout_alignLeft="@+id/left"
        android:text="@string/onegrasp" />

    <Button
        android:id="@+id/grasp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/up"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/grasp" />

</RelativeLayout>